# clutter

./: .gitignore  README.md
backend/: pyproject.toml  run.py
backend/clutter/: app.py  config.py  error.py  run.py  util.py
backend/clutter/routes/: item.py
extension/: manifest.json
extension/src/: api.mjs  background.js  background.mjs
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/components/: item-grid.module.scss  item-grid.tsx
frontend/app/lib/: api.ts  client-api.ts  constants.ts
